Adição de novos elementos de alerta
Dentro do modal que informa o resultado da aplicação, inseri novos elementos de título e de texto que complementarão as informações do resultado.

--- a/index.html
+++ b/index.html
@@ -53,6 +53,13 @@
 
           <span> Seu IMC é de 28 </span>
         </h2>
+        
+        <!-- ADICIONANDO NOVA DIV PARA OS ALERTAS -->
+        
+        <div class="modal inform">
+          <h3>Perigo!</h3>
+          <p class="text">Acima do peso (sobrepeso)</p>
+        </div>
       </div>
     </div>
   </body>
